Bug 1321522: Add null check and logging on fontResource in RecordedScaledFontCreation::PlayEvent. r=milan

MozReview-Commit-ID: 3nM28xgGLPO